Profile/Deploy/istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile
  labels:
    app: profile
    service: profile
spec:
  ports:
  - port: 80
    name: http-web #naming very important
  selector:
    app: profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-v1
  labels:
    app: profile
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
      version: v1
  template:
    metadata:
      labels:
        app: profile
        version: v1
    spec:
      serviceAccountName: croudpulse-profile
      containers:
      - name: profile
        image: gcr.io/fluted-agency-265710/profile:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /status/healthz
            port: 80
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /status/healthz
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 10
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: profile-v2
    labels:
      app: profile
      version: v2
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: profile
        version: v2
    template:
      metadata:
        labels:
          app: profile
          version: v2
      spec:
        serviceAccountName: croudpulse-profile
        containers:
        - name: profile
          image: gcr.io/fluted-agency-265710/profile:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /status/healthz
              port: 80
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /status/healthz
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: croudpulse-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: croudpulse-service
spec:
  gateways:
  - croudpulse-gateway
  hosts:
  - '*'
  http:
  # - match:
  #   - uri:
  #       prefix: /profile
  #   - uri:
  #       prefix: /profile/
  #   # rewrite:
  #   #   uri: "/"
  #   route:
  #   - destination:
  #       host: profile-api-service
  #       # host: profile-api.expo-dev.svc.cluster.local
  #       port:
  #         number: 80
  # - match:
  #   - uri:
  #       exact: /weatherforecast
    - route:
      - destination:
          host: profile.default.svc.cluster.local
          subset: v1
          port:
            number: 80
        weight: 10
      - destination:
          host: profile.default.svc.cluster.local
          subset: v2
          port:
            number: 80
        weight: 90
---
  apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: profile
  spec:
    host: "*"
    # trafficPolicy:
    #   loadBalancer:
    #     simple: RANDOM
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    # - name: v3
    #   labels:
    #     version: v3
